--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 
   <script>
     const images = [
-      'image1.jpg',
-      'image2.jpg',
-      'image3.jpg'
+      'image1.png',
+      'image2.png',
+      'image3.png'
     ];
 
     let index = 0;
